Fix minor layout issues

--- a/src/components/about.module.scss
+++ b/src/components/about.module.scss
@@ -16,7 +16,6 @@
 .header {
   color: rgb(49, 49, 49);
   grid-column: span 4;
-  margin: 0 0 40px 0 !important;
 }
 
 .bioContainer {
