--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -26,5 +26,5 @@ a {
   font-size: 48px;
   color: rgb(82, 82, 82);
   text-align: center;
-  margin: 2% 0 4% 0;
+  margin: 0 0 8vh 0;
 }
