--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -12,6 +12,7 @@
 
 .fixed {
   position: fixed !important;
+  z-index: 10;
 }
 
 .link {
